removing heroku-cli feature from devcontainer
since it is no longer maintained, risk of supply chain vulnerability

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,7 @@
 	"workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	"features": {
-		"ghcr.io/devcontainers-contrib/features/heroku-cli:1": {},
+		// "ghcr.io/devcontainers-contrib/features/heroku-cli:1": {},
 		"ghcr.io/devcontainers/features/node:1": {
 			"version": "lts"
 		}
